--- a/index.html
+++ b/index.html
@@ -106,40 +106,43 @@
   <div class="empty-big"></div>
   <div class="empty-big"></div>
   <div class="projects container">
-    <p class="course-big">Course fee</p>
-    <p class="course-litle">Course</p>
+    <p class="course-big">Projects</p>
+    <p class="course-litle">Projects</p>
     <div class="empty-litle"></div>
-    <div class="flex-pr">
+    <div class="empty-big"></div>
+    <div class="flex-pro">
       <div class="proj-right">
         <div class="circle">
           <div class="circ"></div>
           <p class="desig">Design To Do List app</p>
         </div>
-        <p class="pro-txt">
-          The previous student design project was the To Do List application
-          product factory, The counter examples are the result of the efforts of
-          the students and their teamwork in the first course.
-        </p>
-        <div class="btm-req">
-          <i class="fas fa-check-circle"></i>
-          <p class="pro-text">
-            Experience teamwork in a real product team and a collaborative
-            effort
+        <div class="pro-check">
+          <p class="pro-txt">
+            The previous student design project was the To Do List application
+            product factory, The counter examples are the result of the efforts
+            of the students and their teamwork in the first course.
           </p>
-        </div>
-        <div class="btm-req">
-          <i class="fas fa-check-circle"></i>
-          <p class="pro-text">
-            Experience teamwork in a real product team and a collaborative
-            effort
-          </p>
-        </div>
-        <div class="btm-req">
-          <i class="fas fa-check-circle"></i>
-          <p class="pro-text">
-            Experience teamwork in a real product team and a collaborative
-            effort
-          </p>
+          <div class="btm-req">
+            <i class="fas fa-check-circle"></i>
+            <p class="pro-text">
+              Experience teamwork in a real product team and a collaborative
+              effort
+            </p>
+          </div>
+          <div class="btm-req">
+            <i class="fas fa-check-circle"></i>
+            <p class="pro-text">
+              Experience teamwork in a real product team and a collaborative
+              effort
+            </p>
+          </div>
+          <div class="btm-req">
+            <i class="fas fa-check-circle"></i>
+            <p class="pro-text">
+              Experience teamwork in a real product team and a collaborative
+              effort
+            </p>
+          </div>
         </div>
         <div class="pro-btm">
           <p class="son">4/15</p>
@@ -149,8 +152,8 @@
         <div class="gor"></div>
         <div class="ver"></div>
         <div class="pro-ico">
-          <i class="far fa-chevron-square-right"></i>
           <i class="far fa-chevron-square-left"></i>
+          <i class="far fa-chevron-square-right"></i>
         </div>
       </div>
     </div>
