--- a/index.html
+++ b/index.html
@@ -116,12 +116,12 @@
           <div class="circ"></div>
           <p class="desig">Design To Do List app</p>
         </div>
+        <p class="pro-txt">
+          The previous student design project was the To Do List application
+          product factory, The counter examples are the result of the efforts of
+          the students and their teamwork in the first course.
+        </p>
         <div class="pro-check">
-          <p class="pro-txt">
-            The previous student design project was the To Do List application
-            product factory, The counter examples are the result of the efforts
-            of the students and their teamwork in the first course.
-          </p>
           <div class="btm-req">
             <i class="fas fa-check-circle"></i>
             <p class="pro-text">
@@ -158,4 +158,39 @@
       </div>
     </div>
   </div>
+  <div class="empty-big"></div>
+  <div class="empty-big"></div>
+  <div class="foot-section">
+    <div class="footer container">
+      <p class="course-big">Schedule</p>
+      <p class="course-litle">Schedule</p>
+      <div class="empty-big"></div>
+      <div class="sched-one">
+        <p class="sched-start">Start of course</p>
+        <div class="dashed"></div>
+        <p class="sched-start">End of Course</p>
+      </div>
+      <div class="empty-big"></div>
+      <div class="empty-big"></div>
+      <div class="sched-date">
+        <div class="start-date">
+          <p>2019    /    08 /    11</p>
+        </div>
+        <div class="start-date">
+          <p>2019    /    08 /    11</p>
+        </div>
+      </div>
+      <div class="empty-big"></div>
+      <div class="empty-big"></div>
+      <div class="onbir">
+        <p class="sched-btm"><span>11</span> Days left to sign up</p>
+        <button type="submit" class="reg">Register</button>
+      </div>
+    </div>
+  </div>
+  <div class="empty-big"></div>
+  <div class="empty-big"></div>
+  <div class="container"><img src="images/Group 909.png" alt="" /></div>
+  <div class="empty-big"></div>
+  <div class="empty-big"></div>
 </body>
