--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@
   </div>
   <div class="empty-big"></div>
   <div class="empty-big"></div>
-  <div class="container"><img src="images/Group 909.png" alt="" /></div>
+  <div class="containerff"><img src="images/Group 909.png" alt="" /></div>
   <div class="empty-big"></div>
   <div class="empty-big"></div>
   
