--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             src="img/about_us/button_icon.png"
             alt=""
         /></a>
-        <p class="Hero_content about_us_page_content">
+        <p class="Hero_content about_us_page_content azizbek">
           Today, given the economic and labor market conditions, the best and
           least risky way to invest is to invest in personal assets and skills.
           UI / UX Product Design Course covers all aspects of product design
@@ -72,13 +72,13 @@
     <div id="Course_Experience" class="Course_Experience">
       <img src="img/experience/Experience.png" alt="" />
       <div class="Course_Experience_menu">
-        <p>After attending the course</p>
+        <p>After attending</p>
         <p class="border_content">During the period</p>
         <p>During the period</p>
       </div>
       <div class="Course_Experience_content2">
         <img src="img/experience/Group 925.png" alt="" />
-        <p class="about_us_page_content Hero_content Experience_content">
+        <p class="aziz">
           This course has been attempted by zero people who are eager to learn
           product design, especially user experience and user interface, so it
           is not a prerequisite, but due to the limited capacity of the priority
